<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LearnMenu.Learn_T2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:padding="20dp"
                android:text="stoichiometric coefficient"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                android:text="@string/learn_t2_para1"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17dp"
                tools:ignore="SpUsage" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                android:text="@string/learn_t2_para2"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17dp"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/learn_t2_para3a"
                android:textAllCaps="true"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                android:textColor="@color/cyan"
                android:textSize="17dp"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/learn_t2_para3b"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                tools:ignore="SpUsage" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/learn_t2_para4"
                android:textAllCaps="true"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                android:textColor="@color/white"
                android:textSize="17dp"
                tools:ignore="SpUsage" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/learn_t2_para5"
                android:textAllCaps="true"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"

                android:textColor="@color/white"
                android:textSize="17dp"
                tools:ignore="SpUsage" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                android:text="@string/learn_t2_para6"
                android:textAllCaps="true"
                android:layout_marginBottom="50dp"
                android:textColor="@color/white"
                android:textSize="17dp"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>