<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LearnMenu.Learn_T1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"

                android:padding="20dp"
                android:text="related terminology"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                android:text="@string/learn_t1_para1_a"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17dp"
                tools:ignore="SpUsage" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                android:text="@string/learn_t1_para1_b1"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17dp"
                tools:ignore="SpUsage" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/learn_t1_para1_b2"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                android:textAllCaps="true"
                android:textColor="@color/cyan"
                android:textSize="17dp"
                tools:ignore="SpUsage" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/learn_t1_para1_b3"
                android:textAllCaps="true"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                android:textColor="@color/white"
                android:textSize="17dp"
                tools:ignore="SpUsage" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@drawable/gray_round_bg"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:paddingVertical="5dp"
                android:text="@string/learn_t1_para1_c"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17dp"
                tools:ignore="SpUsage" />
            <Button
                android:id="@+id/t1_btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_green_long_rect_btn_xml"
                android:onClick="t1_clickDone"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="10dp"
                android:text="Done"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle,HardcodedText"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="475dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>